# UEA-ADA_backtracking

./: LICENSE  README.md  casos_cambio_exacto.txt  main.py  pyproject.toml
cambio-exacto/: create_coin.py  main.py  network_steps.py  pyproject.toml  test.py
src/: __init__.py  backtraking.py  gui.py  network_steps.py
