[project]
name = "cambio-exacto"
version = "0.1.0"
description = "Algoritmo Backtracking para el problema de cambio exacto"
readme = "README.md"
authors = [
    { name = "Jorge Juárez", email = "jorge.juarez@cua.uam.mx" },
    { name = "Leonardo Aguilar", email = "leonardo.aguilar@cua.uam.mx" }
]
requires-python = ">=3.12"
dependencies = [
    "flet[all]==0.28.3",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
]
